src/test/deca/syntax/valid/created/parser/WithoutObjectExpressions/include/var_def/var.deca
// Description:
//    tests de programme syntaxiquement correct.
//    wrong #include
//
// Resultats:
//    3

{
#include "var_def.decah"
println(var);
}